--- a/MedicalManagement/MedicalManagement.csproj
+++ b/MedicalManagement/MedicalManagement.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+	<Compile Include="DAO\CustomerDAO.cs" />
+    <Compile Include="Forms\Database.cs" />
     <Compile Include="Forms\frmDoctors.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,8 +116,22 @@
     <Compile Include="Forms\frmPay.Designer.cs">
       <DependentUpon>frmPay.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmKhachhang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmKhachhang.designer.cs">
+      <DependentUpon>frmKhachhang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Helper\ControlExtensions.cs" />
+    <Compile Include="Helper\DataTableExtensions.cs" />
+    <Compile Include="Helper\ListExtensions.cs" />
+    <Compile Include="Helper\ObjectUtils.cs" />
+    <Compile Include="Helper\SqlHelper.cs" />
+    <Compile Include="Helper\TextBoxExtensions.cs" />
+    <Compile Include="Model\Customer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\DBValidation.cs" />
     <Compile Include="Forms\frmRegister.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -222,6 +238,10 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>rpt_inventory.cs</LastGenOutput>
     </EmbeddedResource>
+	 <EmbeddedResource Include="Forms\frmKhachhang.resx">
+      <DependentUpon>frmKhachhang.cs</DependentUpon>
+    </EmbeddedResource>
+	<None Include="Properties\DataSources\MedicalManagement.Model.Customer.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
