create and finish staff Model

--- a/MedicalManagement/App.config
+++ b/MedicalManagement/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="medicalManagement" connectionString="Data Source=localhost,1433;Initial Catalog=medicalManagement;User ID=sa;Password=Password123"
+		<add name="medicalManagement" connectionString="Data Source=DESKTOP-QHS5VIT\SQLEXPRESS;Initial Catalog=medicalManagement;Integrated Security=True"
 		 providerName="System.Data.ProviderName" />
 	</connectionStrings>
     <startup> 
