--- a/MedicalManagement/MedicalManagement.csproj
+++ b/MedicalManagement/MedicalManagement.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-	<Compile Include="DAO\CustomerDAO.cs" />
+    <Compile Include="DAO\CustomerDAO.cs" />
     <Compile Include="Forms\Database.cs" />
     <Compile Include="Forms\frmDoctors.cs">
       <SubType>Form</SubType>
@@ -129,6 +129,7 @@
     <Compile Include="Helper\SqlHelper.cs" />
     <Compile Include="Helper\TextBoxExtensions.cs" />
     <Compile Include="Model\Customer.cs" />
+    <Compile Include="Model\Staff.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DBValidation.cs" />
@@ -238,10 +239,10 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>rpt_inventory.cs</LastGenOutput>
     </EmbeddedResource>
-	 <EmbeddedResource Include="Forms\frmKhachhang.resx">
+    <EmbeddedResource Include="Forms\frmKhachhang.resx">
       <DependentUpon>frmKhachhang.cs</DependentUpon>
     </EmbeddedResource>
-	<None Include="Properties\DataSources\MedicalManagement.Model.Customer.datasource" />
+    <None Include="Properties\DataSources\MedicalManagement.Model.Customer.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
