--- a/MedicalManagement/MedicalManagement.csproj
+++ b/MedicalManagement/MedicalManagement.csproj
@@ -129,7 +129,9 @@
     <Compile Include="Helper\SqlHelper.cs" />
     <Compile Include="Helper\TextBoxExtensions.cs" />
     <Compile Include="Model\Customer.cs" />
+    <Compile Include="Model\Item.cs" />
     <Compile Include="Model\Staff.cs" />
+    <Compile Include="Model\Supplier.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DBValidation.cs" />
