update form medical

--- a/MedicalManagement/App.config
+++ b/MedicalManagement/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="medicalManagement" connectionString="Data Source=DESKTOP-QHS5VIT\SQLEXPRESS;Initial Catalog=medicalManagement;Integrated Security=True"
+		<add name="medicalManagement" connectionString="Data Source=LAPTOP-NH75H5BG\SQLEXPRESS;Initial Catalog=medicalManagement;Integrated Security=True"
 		 providerName="System.Data.ProviderName" />
 	</connectionStrings>
     <startup> 
