refactor and fix bugs form customer

--- a/MedicalManagement/MedicalManagement.csproj
+++ b/MedicalManagement/MedicalManagement.csproj
@@ -245,6 +245,7 @@
       <DependentUpon>frmKhachhang.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\DataSources\MedicalManagement.Model.Customer.datasource" />
+    <None Include="Properties\DataSources\MedicalManagement.Model.Item.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
